--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -38,7 +38,7 @@
           "
           matSuffix
           (click)="hide = !hide">
-          <mat-icon> {{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+          <mat-icon>{{ hide ? 'eyeText' : 'visibility' }}</mat-icon>
         </button>
         <mat-error
           *ngIf="form.controls['password'].errors?.['required'] && form.controls['password'].touched">
