--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container>
+<mat-drawer-container autosize>
   <mat-drawer mode="side" opened>
     <bdc-bo-aside></bdc-bo-aside>
   </mat-drawer>
