--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -28,6 +28,13 @@ h1 {
   display: flex;
 }
 
+.align-items-center{
+  align-items: center;
+}
+.justify-space-between{
+  justify-content: space-between;
+}
+
 .container {
   width: 100%;
   padding-right: 15px;
