validaciones de cambio de contraseña

--- a/src/app/views/login/password-reset/password-reset.component.html
+++ b/src/app/views/login/password-reset/password-reset.component.html
@@ -7,15 +7,12 @@
         A continuación, ingresá tu nueva contraseña. <br />
         Recordá que deberá tener:
       </span>
-
-      <mat-chip-listbox>
-        <mat-chip-option color="primary">
-          Al menos ocho caracteres <mat-icon matChipTrailingIcon>download</mat-icon>
-        </mat-chip-option>
-        <mat-chip-option color="primary">Una mayúscula</mat-chip-option>
-        <mat-chip-option color="primary">Un número </mat-chip-option>
-      </mat-chip-listbox>
-
+      <ul>
+        <li>Al menos ocho caracteres.</li>
+        <li>Una mayúscula.</li>
+        <li>Un número.</li>
+        <li>Un caracter especial (Ej.: @, #, $, %, !).</li>
+      </ul>
       <mat-form-field appearance="outline">
         <mat-label>Contraseña</mat-label>
         <input
