--- a/src/app/views/login/password-reset/password-reset.component.scss
+++ b/src/app/views/login/password-reset/password-reset.component.scss
@@ -1,12 +1,15 @@
 @import "./../../../../assets/sass/abstracts/variables";
 .container {
   .form {
-    mat-chip-listbox{
-      margin-bottom: 42px;
-    }
-    mat-chip-option {
-      display: flex;
-      flex-direction: row-reverse;
+    ul {
+      margin-bottom: 35px;
+      margin-left: 25px;
+      li {
+        padding-bottom: 8px;
+        color: #73777f;
+        font-size: 14px;
+        list-style-image: url("./../../../../assets/svg/check.svg");
+      }
     }
     p {
       font-size: 16px;
