--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,9 +1,11 @@
-<mat-drawer-container autosize>
-  <mat-drawer mode="side" opened>
+<div class="layout">
+  <aside>
     <bdc-bo-aside></bdc-bo-aside>
-  </mat-drawer>
-  <mat-drawer-content>
+  </aside>
+  <header>
     <bdc-bo-searcher></bdc-bo-searcher>
+  </header>
+  <main>
     <router-outlet> </router-outlet>
-  </mat-drawer-content>
-</mat-drawer-container>
+  </main>
+</div>
