--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -1,14 +1,18 @@
-mat-drawer {
-  position: fixed;
-  border: none;
-}
-mat-drawer-container {
-  background-color: white;
-}
-mat-drawer-content {
-  padding-left: 75px;
-  padding-top: 20px;
-  padding-right: 156px;
-  background-color: white;
-  // max-width: 1125px;
+.layout {
+  display: grid;
+  grid-template-areas:
+    "aside header"
+    "aside main";
+
+  aside {
+    grid-area: aside;
+  }
+
+  header {
+    grid-area: header;
+  }
+  
+  main {
+    grid-area: main;
+  }
 }
