refactor de aside

--- a/src/app/views/dashboard/aside/aside.component.html
+++ b/src/app/views/dashboard/aside/aside.component.html
@@ -13,7 +13,7 @@
   </button>
 
   <nav>
-    <ng-container *ngFor="let a of b">
+    <!-- <ng-container *ngFor="let a of b">
       <div
         class="item"
         routerLinkActive="active"
@@ -28,7 +28,7 @@
         </div>
         <p *ngIf="!isOpen">{{a.cosito}}</p>
       </div>
-    </ng-container>
+    </ng-container> -->
 
     <div class="item" routerLinkActive="active" [routerLink]="['/dashboard/listado-de-preguntas']">
       <div class="bg-icon">
