--- a/src/assets/sass/layout/entry.scss
+++ b/src/assets/sass/layout/entry.scss
@@ -1,9 +1,10 @@
 .container {
   display: flex;
-  justify-content: space-between;
-  padding-top: 110px;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   .form {
-    width: 100%;
+    width: 60%;
     max-width: 450px;
     display: flex;
     flex-direction: column;
@@ -25,6 +26,7 @@
       margin-bottom: 10px;
     }
     img {
+      height: 100%;
       max-width: 260px;
       align-self: center;
       margin: 40px 0;
@@ -35,6 +37,12 @@
     }
   }
   img {
+    height: 90vh;
+    max-height: 600px;
+    width: auto;
+    min-width: 200px;
     max-width: 552px;
+    display: inline-block;
+    margin-left: 40px;
   }
 }
