--- a/src/app/views/dashboard/aside/aside.component.html
+++ b/src/app/views/dashboard/aside/aside.component.html
@@ -11,93 +11,7 @@
     </div>
     <ng-template #notOpen><mat-icon>add</mat-icon></ng-template>
   </button>
-
-  <nav>
-    <!-- <ng-container *ngFor="let a of b">
-      <div
-        class="item"
-        routerLinkActive="active"
-        [routerLink]="a.link">
-        <div class="bg-icon">
-          <img [src]="a.icon" />
-          <div class="item-data" *ngIf="isOpen">
-            <p>{{a.label}}</p>
-            <p>{{a.value}}</p>
-            
-          </div>
-        </div>
-        <p *ngIf="!isOpen">{{a.cosito}}</p>
-      </div>
-    </ng-container> -->
-
-    <div class="item" routerLinkActive="active" [routerLink]="['/dashboard/listado-de-preguntas']">
-      <div class="bg-icon">
-        <img src="./../../../assets/svg/aside/list-container.svg" />
-        <div class="item-data" *ngIf="isOpen">
-          <p>Preguntas</p>
-          <p>365</p>
-        </div>
-      </div>
-      <p *ngIf="!isOpen">Preguntas</p>
-    </div>
-    <div class="item" routerLinkActive="active" [routerLink]="['/dashboard/categorias']">
-      <div class="bg-icon">
-        <img src="./../../../assets/svg/aside/categoria.svg" />
-        <div class="item-data" *ngIf="isOpen">
-          <p>Categorías</p>
-          <p>365</p>
-        </div>
-      </div>
-      <p *ngIf="!isOpen">Categorías</p>
-    </div>
-    <div class="item" routerLinkActive="active" [routerLink]="['/dashboard/sinonimos']">
-      <div class="bg-icon">
-        <img src="./../../../assets/svg/aside/sinonimos.svg" />
-        <div class="item-data" *ngIf="isOpen">
-          <p>Sinonimos</p>
-          <p>365</p>
-        </div>
-      </div>
-      <p *ngIf="!isOpen">Sinonimos</p>
-    </div>
-    <div class="item" routerLinkActive="active" [routerLink]="['/dashboard/metricas']">
-      <div class="bg-icon">
-        <img src="./../../../assets/svg/aside/segment.svg" />
-        <div class="item-data" *ngIf="isOpen">
-          <p>Metrica</p>
-        </div>
-      </div>
-      <p *ngIf="!isOpen">Metrica</p>
-    </div>
-    <div class="item" routerLinkActive="active" [routerLink]="['/dashboard/usuarios']">
-      <div class="bg-icon">
-        <img src="./../../../assets/svg/aside/users.svg" />
-        <div class="item-data" *ngIf="isOpen">
-          <p>Usuarios</p>
-        </div>
-      </div>
-      <p *ngIf="!isOpen">Usuarios</p>
-    </div>
-    <div class="item" routerLinkActive="active" [routerLink]="['/dashboard/perfil']">
-      <div class="bg-icon">
-        <img src="./../../../assets/svg/aside/user.svg" />
-        <div class="item-data" *ngIf="isOpen">
-          <p>Perfil</p>
-        </div>
-      </div>
-      <p *ngIf="!isOpen">Perfil</p>
-    </div>
-    <div class="item" routerLinkActive="active" [routerLink]="['/dashboard/alerta']">
-      <div class="bg-icon">
-        <img src="./../../../assets/svg/aside/bell.svg" />
-        <div class="item-data" *ngIf="isOpen">
-          <p>Alertas</p>
-          <p>1515</p>
-        </div>
-      </div>
-      <p *ngIf="!isOpen">Alertas</p>
-    </div>
-  </nav>
+  <bdc-bo-nav [isOpen]="isOpen"></bdc-bo-nav>
   <div class="logout" (click)="handleLogOut()">
     <mat-icon> logout </mat-icon>
     <p *ngIf="isOpen">Salir</p>
