--- a/src/assets/sass/layout/entry.scss
+++ b/src/assets/sass/layout/entry.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  margin: auto;
   .form {
     width: 60%;
     max-width: 450px;
