--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -1,6 +1,7 @@
 .layout {
   display: grid;
-  grid-template-rows: 55px calc(100vh - 55px);
+  grid-template-columns: min-content minmax(768px, 100%);
+  grid-template-rows: 80px calc(100vh - 80px);
   grid-template-areas:
     'aside header'
     'aside main';
