--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -1,4 +1,4 @@
-@import './abstracts/variables';
+@import "./abstracts/variables";
 
 html,
 body {
@@ -6,10 +6,9 @@ body {
   height: 100%;
 }
 
-
 body {
   margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 a {
   text-decoration: none;
@@ -23,7 +22,7 @@ ul {
 }
 h1 {
   color: #002020;
-  font-size: 3.6rem;
+  font-size: 36px;
   font-weight: 400;
 }
 
