--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -18,7 +18,7 @@
 
   main {
     margin-left: 74px;
-    margin-right: 168px;
+    padding-right: 168px;
     grid-area: main;
     overflow: auto;
   }
