--- a/src/app/views/login/password-recovery/recover-password.component.html
+++ b/src/app/views/login/password-recovery/recover-password.component.html
@@ -18,7 +18,7 @@
         </mat-error>
       </mat-form-field>
       <button
-        mat-raised-button
+         mat-flat-button
         color="primary"
         [disabled]="form.invalid"
         (click)="onSubmit()"
@@ -33,7 +33,7 @@
 <ng-template #watchEmail>
   <p>Recuperar contraseña</p>
   <span>Te enviamos un correo electrónico de verificación.</span>
-  <button mat-raised-button color="primary" type="button" [routerLink]="['login']">
+  <button  mat-flat-buttoncolor="primary" type="button" [routerLink]="['login']">
     Volver al inicio
   </button>
   <button
@@ -48,7 +48,7 @@
     </ng-container>
   </button>
   <button
-    mat-raised-button
+     mat-flat-button
     color="primary"
     type="button"
     [routerLink]="['/login/generar-nueva-contraseña']">
