--- a/src/app/views/login/password-reset/password-reset.component.html
+++ b/src/app/views/login/password-reset/password-reset.component.html
@@ -73,7 +73,7 @@
       </mat-form-field>
 
       <button
-        mat-raised-button
+         mat-flat-button
         color="primary"
         [disabled]="form.invalid"
         (click)="onSubmit()"
@@ -82,7 +82,7 @@
       </button>
     </ng-container>
     <a [routerLink]="'/login'">
-      <button mat-raised-button color="primary">volver</button>
+      <button  mat-flat-buttoncolor="primary">volver</button>
     </a>
   </form>
   <img src="./../../../assets/img/img-laptop.png" />
