--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/dashboard-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/dashboard-categories.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="d-flex">
     <h1>Categorías</h1>
-    <button mat-raised-button color="primary">Primary</button>
+    <button mat-flat-buttoncolor="primary">Primary</button>
   </div>
   <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ducimus, perspiciatis
