--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -42,7 +42,7 @@
             <mat-icon svgIcon="eyeText"></mat-icon>
           </ng-container>
           <ng-template #showPassword>
-            <mat-icon svgIcon="eyePsw"></mat-icon>
+            <mat-icon svgIcon="eyePassword"></mat-icon>
           </ng-template>
         </button>
         <mat-error
@@ -62,7 +62,7 @@
         >Mantener sesión iniciada</mat-checkbox
       >
       <button
-        mat-raised-button
+        mat-flat-button
         color="primary"
         [disabled]="form.invalid || isLogginIn"
         type="button"
