--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/dashboard-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/dashboard-synonyms.component.html
@@ -19,17 +19,21 @@
       <th mat-header-cell *matHeaderCellDef>Sinónimo(s)</th>
       <td mat-cell *matCellDef="let element">
         <mat-chip-listbox>
-          <ng-container *ngFor="let item of element.name">
-            <mat-chip>
-              <span>{{ item }}</span>
-              <button
-                matChipRemove
-                aria-label="eliminar sinonimo"
-                (click)="deleteItem(element.name, item)">
-                <mat-icon>close</mat-icon>
-              </button>
-            </mat-chip>
-          </ng-container>
+          <div class="action">
+            <mat-icon>chevron_left</mat-icon>
+            <ng-container *ngFor="let item of element.name">
+              <mat-chip>
+                <span>{{ item }}</span>
+                <button
+                  matChipRemove
+                  aria-label="eliminar sinonimo"
+                  (click)="deleteItem(element.name, item)">
+                  <mat-icon>cancel</mat-icon>
+                </button>
+              </mat-chip>
+            </ng-container>
+            <mat-icon>chevron_right</mat-icon>
+          </div>
         </mat-chip-listbox>
       </td>
     </ng-container>
