alert component, scroll to right

--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/alert/alert.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/alert/alert.component.html
@@ -1,6 +1,7 @@
-<span matSnackBarLabel> Eliminaste "{{ item }}" </span>
+<span matSnackBarLabel [innerHTML]="data.templateHTML"></span>
+
 <span matSnackBarActions>
-  <button mat-button matSnackBarAction (click)="snackBarRef.dismissWithAction()">
+  <button mat-button matSnackBarAction (click)="handleManualCloseAlert()">
     <div class="action">
       <span>DESHACER</span>
       <mat-icon>close</mat-icon>
