mejoras en el scroll de sinonimos, modificacion del menu

--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/alert/alert.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/alert/alert.component.scss
@@ -8,10 +8,13 @@
 
 :host {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-size: 14px;
     .action {
         display: flex;
         align-items: center;
+       
         .mat-icon {
             font-size: 14px;
             padding-top: 10px;
