--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -17,8 +17,13 @@
 
   main {
     margin-left: 74px;
-    padding-right: 168px;
+    padding-right: 70px;
     grid-area: main;
     overflow: auto;
+
+    @media (min-width:1020px) {
+      padding-right: 168px;
+      
+    }
   }
 }
