--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,3 +1,5 @@
-@import './my-theme.scss';
-@import './base.scss';
-@import './utilities.scss';
+@import "./my-theme.scss";
+@import "./base.scss";
+@import "./utilities.scss";
+@import "./abstracts/mixins.scss";
+
