--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/dashboard-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/dashboard-synonyms.component.html
@@ -12,40 +12,30 @@
   </p>
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef>Origen</th>
+      <th width="30%" mat-header-cell *matHeaderCellDef>Origen</th>
       <td mat-cell *matCellDef="let element" class="text-blue">{{ element.position }}</td>
     </ng-container>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Sinónimo(s)</th>
       <td mat-cell *matCellDef="let element">
-        <div class="action">
-          <bdc-bo-scroll-synonyms [element]="element"></bdc-bo-scroll-synonyms>
-        </div>
+        <bdc-bo-scroll-synonyms [element]="element"></bdc-bo-scroll-synonyms>
       </td>
     </ng-container>
-    <ng-container width="5%" matColumnDef="seeMore">
-      <th mat-header-cell *matHeaderCellDef></th>
+    <ng-container matColumnDef="seeMore">
+      <th mat-header-cell width="40px" *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
         <div class="more-options">
           <button [matMenuTriggerFor]="menu" mat-icon-button aria-label="más opciones">
             <mat-icon>more_vert</mat-icon>
           </button>
-
           <mat-menu #menu="matMenu">
             <button mat-menu-item>
-              <mat-icon>dialpad</mat-icon>
-              <span>Redial</span>
-            </button>
-            <button mat-menu-item disabled>
-              <mat-icon>voicemail</mat-icon>
-              <span>Check voice mail</span>
+              <span>Eliminar</span>
             </button>
             <button mat-menu-item>
-              <mat-icon>notifications_off</mat-icon>
-              <span>Disable alerts</span>
+              <span>Editar</span>
             </button>
           </mat-menu>
-
           <div class="menu" [ngClass]="{ open: element.isOpen }"></div>
         </div>
       </td>
