--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/scroll-synonyms/scroll-synonyms.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/scroll-synonyms/scroll-synonyms.component.scss
@@ -1,10 +1,34 @@
-.container-scroll {
+.wrapper {
   display: flex;
-  align-items: center;
-  width: 100%;
-  .scroll {
-    width: 600px;
+  .container-scroll {
+    display: flex;
+    align-items: center;
+    width: 310px;
     overflow: hidden;
     flex-wrap: nowrap;
+    @media (min-width: 1024px) {
+      width: 600px;
+    }
+    mat-chip {
+      background-color: white;
+      border: 1px solid #a7abb3;
+      span {
+        color: #73777f;
+      }
+
+      & button {
+        opacity: 0;
+      }
+      &:hover {
+        color: #73777f;
+        background-color: #dfe3eb;
+        button {
+          opacity: 1;
+        }
+        mat-icon {
+          color: #73777f;
+        }
+      }
+    }
   }
 }
