--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -1,4 +1,5 @@
 @import './abstracts/variables';
+@import './components/buttons/button.scss';
 
 html,
 body {
@@ -24,17 +25,6 @@ h1 {
   color: #002020;
   font-size: 36px;
   font-weight: 400;
-}
-
-.d-flex {
-  display: flex;
-}
-
-.align-items-center {
-  align-items: center;
-}
-.justify-space-between {
-  justify-content: space-between;
 }
 
 .container {
